--- a/page4.html
+++ b/page4.html
@@ -62,14 +62,14 @@
 						<a class="nav-link link dropdown-toggle text-secondary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Experiences</a><div class="dropdown-menu" aria-labelledby="dropdown-539"><a class="dropdown-item text-secondary text-primary display-4" href="page4.html">Tours</a><a class="dropdown-item text-secondary text-primary display-4" href="hotel-workshops.html">Workshops<br></a></div>
 					</li></ul>
 				<div class="icons-menu">
-					<a class="iconfont-wrapper" href="https://mobiri.se">
+					<a class="iconfont-wrapper" href="https://www.facebook.com/" target="_blank">
 						<span class="p-2 mbr-iconfont socicon-facebook socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
 					</a>
-					<a class="iconfont-wrapper" href="https://mobiri.se">
+					<a class="iconfont-wrapper" href="https://www.instagram.com/">
 						<span class="p-2 mbr-iconfont socicon-instagram socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
 					</a>
-					<a class="iconfont-wrapper" href="https://mobiri.se">
-						<span class="p-2 mbr-iconfont socicon-mail socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
+					<a class="iconfont-wrapper" href="https://twitter.com/?lang=ro">
+						<span class="p-2 mbr-iconfont socicon-twitter socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
 					</a>
 					
 				</div>
@@ -178,7 +178,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="E6YBr+wq2i/KzsQLEF/pnUKq9CanPlmJfcwx/H5GSfoOHpHXw+5Lyjzl0PTjs9oqI5IIiHbpbxC0W1Tic+/KlFfQImXSGcM9Ywqg5JwARjg4o5ZrabnNHp4Mtf2YSDSO">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MmObtmpyjYwejzMrDpDsF2b0N16Zlg7lLkzhBfyz+FWno5L6+1ziVMhLu01zthMc/F/fo7SAsjHcoyFzw6l5g8FMGTmDS9YhyIGvhwxJjF0UB+zx6L36T+CYbpjtKdNH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Your next adventure awaits!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -233,7 +233,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-7">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB7QWkvlxV39ZsyKvhZRjPGVqlJFvxxNkw&amp;q=-8.152132, 115.418106" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAtXm0x23nRCgazjDV2Kl3GTHRP411ougQ&amp;q=-8.152132, 115.418106" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -252,17 +252,17 @@
             <div class="col-12 mt-4">
                 <div class="social-row">
                     <div class="soc-item">
-                        <a href="https://mobiri.se/" target="_blank">
-                            <span class="mbr-iconfont socicon socicon-facebook display-7"></span>
+                        <a href="https://www.facebook.com/" target="_blank">
+                            <span class="mbr-iconfont display-7 socicon-facebook socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://mobiri.se/" target="_blank">
+                        <a href="https://twitter.com/?lang=ro" target="_blank">
                             <span class="mbr-iconfont socicon-twitter socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://mobiri.se/" target="_blank">
+                        <a href="https://www.instagram.com/" target="_blank">
                             <span class="mbr-iconfont socicon-instagram socicon"></span>
                         </a>
                     </div>
@@ -277,7 +277,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3121334" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3121334" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-software.html">Landing Page Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
