--- a/hotel-workshops.html
+++ b/hotel-workshops.html
@@ -65,10 +65,10 @@
 					<a class="iconfont-wrapper" href="https://www.facebook.com/" target="_blank">
 						<span class="p-2 mbr-iconfont socicon-facebook socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
 					</a>
-					<a class="iconfont-wrapper" href="https://www.instagram.com/">
+					<a class="iconfont-wrapper" href="https://www.instagram.com/" target="_blank">
 						<span class="p-2 mbr-iconfont socicon-instagram socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
 					</a>
-					<a class="iconfont-wrapper" href="https://twitter.com/?lang=ro">
+					<a class="iconfont-wrapper" href="https://twitter.com/?lang=ro" target="_blank">
 						<span class="p-2 mbr-iconfont socicon-twitter socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
 					</a>
 					
@@ -176,7 +176,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sxy+aRFf8y5kPdxKRDJNOAdfxpYU1wZ4B+jMYU3lG8Az0F/Bvt6+bLsSV4mNy4I45ut4x9BHOQWPeKgfm3d0/UHlJopHJQrkQ+79w+8jLPxB+uwIWXn4vqNkboOAKQ/o">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="JgAfgez0KLSmTT3EPHBuItUdVikvspCR6iDMLghSZyqGzcIaijjDnIn0fQiJv9NaNXizhpFQYOW3NZ7vL9Xumo4jHnB5Q1Ie4ZzsiVQGeLOrkj3EVcpXUydFvNcC0uGF">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">See you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
