--- a/page4.html
+++ b/page4.html
@@ -65,10 +65,10 @@
 					<a class="iconfont-wrapper" href="https://www.facebook.com/" target="_blank">
 						<span class="p-2 mbr-iconfont socicon-facebook socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
 					</a>
-					<a class="iconfont-wrapper" href="https://www.instagram.com/">
+					<a class="iconfont-wrapper" href="https://www.instagram.com/" target="_blank">
 						<span class="p-2 mbr-iconfont socicon-instagram socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
 					</a>
-					<a class="iconfont-wrapper" href="https://twitter.com/?lang=ro">
+					<a class="iconfont-wrapper" href="https://twitter.com/?lang=ro" target="_blank">
 						<span class="p-2 mbr-iconfont socicon-twitter socicon" style="color: rgb(166, 169, 156); fill: rgb(166, 169, 156);"></span>
 					</a>
 					
@@ -178,7 +178,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MmObtmpyjYwejzMrDpDsF2b0N16Zlg7lLkzhBfyz+FWno5L6+1ziVMhLu01zthMc/F/fo7SAsjHcoyFzw6l5g8FMGTmDS9YhyIGvhwxJjF0UB+zx6L36T+CYbpjtKdNH">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Ck7g6Dgs3LcP8WA4J6GxtsFhNCvUbFMy160JgEeO5y2XpD0DCnOYKmd0K+mH+uQWAVWcILgnmBNuSHc/JIYGR5B1gdM9CfKMrLdWy06idTqU1w8yDsYrZeS7lLETBUp5">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Your next adventure awaits!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -277,7 +277,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3121334" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-software.html">Landing Page Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3121334" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
